Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -3479,8 +3479,8 @@
  MACRO_NO_SAILORS:0 "£icon_sailors£が不足しています。"
  sailors:0 "水兵"
  SAILORS:0 "水兵増加"
- LOCAL_SAILORS:0 "州内の水兵数補正"
- GLOBAL_SAILORS:0 "国内全体の水兵数補正"
+ LOCAL_SAILORS:0 "州水兵補正"
+ GLOBAL_SAILORS:0 "国内水兵補正"
  SAILORS_RECOVERY:0 "水兵回復速度"
  MACRO_TOO_FEW_MERCS:0 "このひな形の分だけ作成するには傭兵連隊が足りません。"
  MACRO_NO_MONEY:0 "§R建設には$NEEDED|0$¤が必要です。§!"
@@ -4669,7 +4669,7 @@
  CANNOT_EDIT_CN_WHEN_READY:0 "§R準備が整ったことをホストに通知した後でカスタム国家の編集は行なえません。§!"
  EDIT_CN_NOT_ALLOWED_BY_OPTION:0 "§Rこの設定では、カスタム国家の追加が許可されていません。§!"
  LOOT_NOT_LOOTING:0 "この州における略奪の価値は§Y$TOTAL$§!¤です。"
- LOOT_DESC:0 "1ヵ月あたりの略奪量は、敵対する連隊の数に依存します。最大で§Y$AMT$§!¤が、1ヵ月で州から略奪できる可能性があります。"
+ LOOT_DESC:0 "1ヶ月間に略奪される量は、敵連隊の数によって異なります。1ヶ月にこの州から略奪できるのは、最大で§Y$AMT$§!¤です。"
  LOOT_LOOTING:0 "この州における略奪の価値は§Y$TOTAL$§!¤であり、我々の軍隊は来月§Y$MONTHLY$§!¤を略奪します。"
  LOOT_HORDE_UNITY:0 "我々はこれにより$CHANGE$の遊牧民の結束を得られます。"
  LOOT_EMPTY:0 "この州は戦争によって完全に消耗しており、略奪によって得られるものはありません。"
