--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -243,7 +243,7 @@
  NEW_ACHIEVEMENT_8_28_NAME:0 "神聖でもなく、ドイツでもない"
  NEW_ACHIEVEMENT_8_28_DESC:0 "ゲルマン文化ではない帝国自由都市を7つ所有する。"
  NEW_ACHIEVEMENT_8_29_NAME:0 "植民地経営"
- NEW_ACHIEVEMENT_8_29_DESC:0 "植民地3つの植民地で同時に総督を直接任命する。"
+ NEW_ACHIEVEMENT_8_29_DESC:0 "直接任命された植民地総督が3人同時にいる。"
  NEW_ACHIEVEMENT_8_30_NAME:0 "電撃投票"
  NEW_ACHIEVEMENT_8_30_DESC:0 "議会で議題を11回可決する。"
  NEW_ACHIEVEMENT_8_31_NAME:0 "産業進化"
