--- a/source/localisation/tradenodes_l_english.yml
+++ b/source/localisation/tradenodes_l_english.yml
@@ -151,10 +151,10 @@
  NO_TRADE_COMPANY_NO_REGION:0 "この地域で交易会社を設立することはできません。"
  NO_TRADE_COMPANY_ON_OWN_CONTINENT:0 "あなたの本拠がある大陸に交易会社を設立することはできません。"
  CONFIRM_JOIN_TRADE_COMPANY_TITLE:0 "交易会社に州を割り当てる"
- CONFIRM_JOIN_TRADE_COMPANY_DESC_NEW:0 "$REGION|Y$に新しい交易会社を創設します。$PROVINCE|Y$の支配権を新会社に与えることは、建設する交易帝国の価値を大きく向上させますが、兵力や税金の源泉としての価値は低下します。\nまた母国が採用している制度のこの州への自動的な伝播も無効になります。"
+ CONFIRM_JOIN_TRADE_COMPANY_DESC_NEW:0 "$REGION|Y$に新しい交易会社を創設します。$PROVINCE|Y$の支配権を新会社に与えると、建設する交易帝国の価値を大きく向上させますが、兵力や税金の源泉としての価値は低下します。\nまた母国が採用している制度のこの州への自動的な伝播も無効になります。"
  CONFIRM_LEAVE_TRADE_COMPANY_TITLE:0 "交易会社から州を削除"
- CONFIRM_ALL_JOIN_TRADE_COMPANY_DESC:0 "$NODE|Y$のすべての州の支配権を$COMPANY|Y$に与えることは、建設する交易帝国の価値を大きく向上させます。しかし兵力や税金の源泉としての価値は低下します。\nまた母国が採用している制度のこの州への自動的な伝播も無効になります。"
- CONFIRM_ALL_JOIN_TRADE_COMPANY_DESC_NEW:0 "$REGION|Y$に新しい交易会社を設立します。$NODE|Y$のすべての州の支配権を新会社に与えることは、建設する交易帝国の価値を大きく向上させますが、兵力や税金の源泉としての価値は低下します。\nまた母国が採用している制度のこの州への自動的な伝播も無効になります。"
+ CONFIRM_ALL_JOIN_TRADE_COMPANY_DESC:0 "$NODE|Y$のすべての州の支配権を$COMPANY|Y$に与えると、建設する交易帝国の価値を大きく向上させますが、兵力や税金の源泉としての価値は低下します。\nまた母国が採用している制度のこの州への自動的な伝播も無効になります。"
+ CONFIRM_ALL_JOIN_TRADE_COMPANY_DESC_NEW:0 "$REGION|Y$に新しい交易会社を設立します。$NODE|Y$のすべての州の支配権を新会社に与えると、建設する交易帝国の価値を大きく向上させますが、兵力や税金の源泉としての価値は低下します。\nまた母国が採用している制度のこの州への自動的な伝播も無効になります。"
  CONFIRM_ALL_LEAVE_TRADE_COMPANY_TITLE:0 "交易会社を閉鎖"
  CONFIRM_ALL_LEAVE_TRADE_COMPANY_DESC:0 "$COMPANY|Y$から$NODE|Y$のすべての州の支配権を取り消し、私たちが直接資源を支配します。\nこれにより、母国が採用している制度のこの州への自動的な伝播も有効になります。"
  MAY_BE_IN_TRADE_COMPANY:0 "$PROVINCE|Y$は$REGION|Y$交易会社地域に属しています。"
@@ -189,9 +189,9 @@
  zambezi:0 "ザンベジ"
  african_great_lakes:0 "アフリカ大湖沼"
  kongo:0 "コンゴ"
- TRADE_COMPANY_ADD:1 "このプロヴィンスを交易会社に設定する。これは税収と人的資源は殆どもたらさないが、その代り交易価値を上げる。"
- TRADE_COMPANY_REMOVE:1 "このプロヴィンスを$NAME|Y$の影響下から外す。"
- CONFIRM_LEAVE_TRADE_COMPANY_DESC:1 "$PROVINCE|Y$を$COMPANY|Y$から取り上げ、我々の直接統治下に置く。\nこれにより我が国が既に受容している制度は自動的にこの土地に広まってゆく。"
+ TRADE_COMPANY_ADD:1 "このプロヴィンスを交易会社に割り当てます。これにより、税と人的資源は減りますが、交易価値は上がります。"
+ TRADE_COMPANY_REMOVE:1 "このプロヴィンスを$NAME|Y$の統治下から外します。"
+ CONFIRM_LEAVE_TRADE_COMPANY_DESC:1 "$PROVINCE|Y$を$COMPANY|Y$から取り上げ、我々の直接統治下に置きます。\nこれにより我が国が既に受容している制度は自動的にこの土地に広まってゆきます。"
  CONFIRM_ALL_JOIN_TRADE_COMPANY_TITLE:1 "交易会社に州を割り当てる"
  IS_IN_TRADE_COMPANY:1 "$PROVINCE|Y$は$COMPANY|Y$の影響下にある。"
  TRADE_COMPANY_INDIA_British_trade_company_south_india:0 "[Root.GetAdjective]領ボンベイ管区"
@@ -212,5 +212,5 @@
  TRADE_COMPANY_DECCAN_Root_Culture_GetName:0 "[Root.Culture.GetName]・デカン会社"
  TRADE_COMPANY_COROMANDEL_Root_Culture_GetName:0 "[Root.Culture.GetName]・コロマンデル会社"
  TRADE_COMPANY_NORTH_INDIA_Root_Culture_GetName:0 "[Root.Culture.GetName]北インド会社"
- CONFIRM_JOIN_TRADE_COMPANY_DESC:0 "$PROVINCE|Y$の支配権を$COMPANY|Y$に与えることは、建設する交易帝国の価値を大きく向上させます。しかし兵力や税金の源泉としての価値は低下します。\nまた母国が採用している制度のこの州への自動的な伝播も無効になります。"
+ CONFIRM_JOIN_TRADE_COMPANY_DESC:0 "$PROVINCE|Y$の支配権を$COMPANY|Y$に与えると、建設する交易帝国の価値を大きく向上させますが、兵力や税金の源泉としての価値は低下します。\nまた母国が採用している制度のこの州への自動的な伝播も無効になります。"
  SV_TRADE_COMPANY_NAME_DESC:1 "この交易会社は$REGION|Y$に置かれ、$NODE|Y$交易ノード内に交易力を持ちます。\n\n交易会社は遠く離れた土地で私たちの交易帝国を管理します。州を交易会社に割り当てることで、彼らの交易力を倍増させ、より大きな海軍力を提供しますが、あなたはこれらの州から税金や兵力をほとんど得ることができなくなります。交易会社が地方内で支配的になると、追加の商人を獲得することができます。"
