Save/Update files [ci skip]

--- a/source/localisation/capybara_l_english.yml
+++ b/source/localisation/capybara_l_english.yml
@@ -5,3 +5,20 @@
  NAME_INVALID_DESC:0 "あなたの名前は無効です。空白及び特殊文字を使用した名前は使用できません。別の名前を選択してください。"
  HAVE_LESS_FREE_EXPLORERS_THAN:0 "自由な探検家がより少ない"
  HAVE_MORE_FREE_EXPLORERS_THAN:0 "自由な探検家の数が少なくとも"
+ epic_button_login:0 "現在ログインしていません。Epicアカウントにログインするにはここをクリックしてください。"
+ epic_button_login_inprogress:0 "ログインプロセスが進行中です。Epicアカウントへのログインをやり直すにはここをクリックしてください。"
+ epic_button_logout:0 "現在$ACCOUNT$アカウントでログイン中です。Epicアカウントをログアウトするにはここを右クリックしてください。Epicフレンドリストを表示するにはここをクリックしてください。"
+ epic_button_logout_no_overlay:0 "現在$ACCOUNT$アカウントでログイン中です。Epicアカウントをログアウトするにはここをクリックしてください。"
+ epic_button_disabled:0 "Epic Servicesの初期化に失敗しました。Epic Games Launcherがインストールされていることをお確かめください。"
+ CLOUDSAVE_ERROR_TITLE:0 "クラウドセーブエラー"
+ CLOUDSAVE_SYNCING:0 "同期中"
+ CLOUDSAVE_ERROR:0 "エラー"
+ CLOUDSAVE_FILENAMEINVALID:0 "ファイル名が無効です。"
+ CLOUDSAVE_FILENAMELENGTHINVALID:0 "ファイル名が長すぎます。"
+ CLOUDSAVE_FILESIZETOOLARGE:0 "ファイルが大きすぎます。"
+ CLOUDSAVE_USERTHROTTLED:0 "制限を超えているため操作を実行できません。"
+ CLOUDSAVE_FILECORRUPTED:0 "ファイルが壊れています。ゲームを再起動するか、もう一度セーブしてください。"
+ EGS_DISCONNECTED_TITLE:0 "接続が切れました"
+ EGS_DISCONNECTED_DESC:1 "Epic Servicesとの接続が切れました。クラウドセーブやアチーブメントなど一部の機能は動作しません。再接続しますか？"
+ EGS_RECONNECT_FAILED_TITLE:1 "Epicへのログイン失敗"
+ EGS_RECONNECT_FAILED_DESC:1 "Epic Servicesへの接続に失敗しました。クラウドセーブやアチーブメントなど一部の機能は動作しません。再試行しますか？"
