--- a/source/localisation/mandate_of_heaven_l_english.yml
+++ b/source/localisation/mandate_of_heaven_l_english.yml
@@ -385,9 +385,9 @@
  FILTER_NEG_OPINION_DESC:0 "我々自身と我々に否定的な評価を持つ国を表示します。"
  FILTER_PLAYERS_DESC:0 "我々自身と他のプレイヤーを表示します。"
  ZERO_TRIBUTE:0 "少なすぎます"
- celestial_empire_events.1.t:1 "[From.GetAdjective]の[From.GovernmentName]の終焉"
- celestial_empire_events.1.d:1 "[From.Capital.GetCapitalName]の陥落に伴い、中華帝国の最後の残党は鎮圧された。天命と古代の儒教による統治は今や明確な概念ではなく、階級としての学者の人々は他の何かに進化するか、さもなくば滅びなければならない。\n帝国の記憶はしばらくの間生き続けるだろうが、[Root.GetName]の[Root.GovernmentName]は最後に[From.Monarch.GetTitle]を滅ぼした者として永遠に記憶されるであろう。"
- celestial_empire_events.1.a:0 "OK"
+ celestial_empire_events.1.t:1 "[From.GetAdjective][From.GovernmentName]の終焉"
+ celestial_empire_events.1.d:1 "[From.Capital.GetCapitalName]の陥落に伴い、中華帝国の最後の残党は粉砕された。天命や古代の儒教的統治は今や廃れた概念であり、階級としての士大夫は他の何かに進化しなければ滅びるだろう。\n帝国の記憶はしばらくの間生き続けるだろうが、[Root.GetName]の[Root.GovernmentName]は最後に[From.Monarch.GetTitle]を滅ぼした者として永遠に記憶されるであろう。"
+ celestial_empire_events.1.a:0 "よし"
  celestial_empire_events.2.t:0 "我らが帝国のための観念"
  celestial_empire_events.2.d:0 "中華帝国を覆うものと仮定して、我々は古代の伝統に足を踏み入れた。[Root.GetName]は、儒教の中国哲学と密接に関連している科挙制度や天命の概念など、多くの制度を継承している。\n中国の新しい帝国として、この観念を自分たちのものと、どの程度統合するかは我々に委ねられているが、儒教の哲学を受け入れることは、我々が現在主張している広大な帝国を支配し、国民の精神に天命を強化するのに役立つだろう。"
  celestial_empire_events.2.a:0 "[Root.Monarch.GetTitle]は[Root.GetTributaryOverlord]である！"
