--- a/source/localisation/tradenodes_l_english.yml
+++ b/source/localisation/tradenodes_l_english.yml
@@ -29,11 +29,11 @@
  CURRENT_POWER:0 "現在の交易力：§Y$VAL$§W"
  OUR_CURRENT_POWER:0 "我々の現在の交易力：§Y$VAL$§W"
  MAX_POWER:0 "交易力：§Y$VAL$§W"
- MERCHANT_PRESENT_EFFECT:0 "駐在商人からの交易力：$VAL|1=+$"
+ MERCHANT_PRESENT_EFFECT:0 " 商人の駐在により$VAL|1=+$の交易力がもたらされています。"
  PROVINCE_POWER:0 "州の交易力：§Y$VAL$§W"
  TRADE_NODE_NOT_YET_DISCOVERED:0 "この交易ノード域内の州はまだ発見されていません。"
  TRADE_NODE_LOCATION_NOT_YET_DISCOVERED:0 "交易ノードの位置がまだ発見されていません。"
- TRADE_MULTI_EXPLA:0 "このノードでの交易力は$VAL$修正された結果、さらに§Y$MUL$§!倍されます。"
+ TRADE_MULTI_EXPLA:0 "さらに、このノードでの交易力補正$VAL$により、§Y$MUL$§!倍されます。"
  TRADE_POWER_CAPITAL:0 "地域内の交易首都：$VAL$"
  TRADE_POWER_TAKE:0 "§Y$COUNTRY$§Wの商人はこの交易ノードから§Y$VAL$§W¤を徴収します。"
  TRADE_POWER_PIRATES_TAKE:0 "§Y$COUNTRY$§Wはこの交易ノードから§Y$VAL$§W¤を徴収します。"
