--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -3652,8 +3652,8 @@
  EVTDESC821:0 "まるで、異端者の巣を1つ根絶やしにするたびに、別の2つが生えてくるようだ。"
  EVTOPTB821A:0 "庭の雑草だ…"
  EVTNAME822:0 "無秩序"
- EVTDESC822:1 "誰もが我々の宗教的教義に同意するわけではない。我々の近代思想への取り組みは狭義であり、古代哲学にこだわることは後退的な非常識だと主張し、声高に訴える人々もいる。"
- EVTOPTB822A:0 "悲しいかな、いくつかは焼かなければならないかもしれない…"
+ EVTDESC822:1 "誰もが我々の宗教的教義に同意するわけではない。我々の近代思想への取り組みは狭義であり、古代哲学にこだわることは後退的な非常識だと主張し、声高に訴える者たちもいる。"
+ EVTOPTB822A:0 "悲しいかな、いくつかは焼かねばなるまい…"
  EVTNAME823:0 "聖人の到着"
  EVTDESC823:1 "今日、聖なる修道会から一人の人物が宮廷に到着し、我々の厳しい、しかし公正な、そして神を敬う、異端者と不信者への罰に感銘を受けた。彼らは顧問の地位を求めており、[Root.GovernmentName]と共に祈り、共に留まるだろうと述べている。"
  EVTOPTB823A:0 "私はこのことについて考えてみよう。"
