--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -1152,7 +1152,7 @@
  SAV_ideas:0 "サヴォイアのアイデア"
  SAV_ideas_start:0 "サヴォイアの伝統"
  SAV_ideas_bonus:0 "サヴォイアの宿願"
- repel_the_french:0 "フランスを撃退"
+ repel_the_french:0 "フランスの撃退"
  repel_the_french_desc:0 "この土地はウンベルト1世が1032年にその称号を手に入れて以来、サヴォイア家に属してきたが、フランスは長い間イタリアの覇権を夢見ており、彼らの野望への道はまっすぐ我々の土地を貫いている。彼らが再びやって来る時には、我々は準備ができていなければならない。"
  the_shroud_of_turin:0 "トリノの聖骸布"
  the_shroud_of_turin_desc:0 "キリスト自身の聖骸布は1390年に我々の土地で発見され、それ以来サヴォイア家の貴重な文化的遺産である。トリノの聖骸布を展示し、彼らの富とともに、巡礼者がピエモンテに群がるのを観察しよう。"
