Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -163,7 +163,7 @@
  achievement_cherrypicking_tooltip:0 "従属大名から星3つの指揮官を取り立てます"
  DOMESTIC_DEBASE_CURRENCY:0 "通貨価値の切り下げ"
  VC_LIST_TITLE:0 "我々は以下の勝利のカードを持っています："
- REINFORCE_COST_MODIFIED_BY:0 "補充のコストは以下の補正を受けています：\n"
+ REINFORCE_COST_MODIFIED_BY:0 "補充のコストに対する補正：\n"
  NO_UNREST_IN_COLONY:0 "植民地は不穏を発生させるには小さすぎます。"
  AUTONOMY_NO_AUTHOIRTY:0 "これ以上権威を下げられないため、自治率は減少させられません。"
  CURR_SPLENDOR_AGE_TT:0 "我々は$VAL|Y$の栄光を持っています。"
@@ -805,11 +805,11 @@
  IMP_PROV_COST_INFO:0 "州の改善のためのコストは$BASE|Y$の君主力を基礎点とします"
  IMP_PROV_COST_INFO_2:0 "州が改善される毎に$MUL|Y$増加します。§Y$PROV$§!は$COUNT|Y$回の改善が行われています。"
  NUM_IMP_PROV_COST_INFO:0 "§Y$PROV$§!は$COUNT|Y$回の改善が行われています。"
- IMPR_FURTHER_MODIFIED_BY:0 "基本コストは以下により補正されます："
+ IMPR_FURTHER_MODIFIED_BY:0 "基本コストに対する補正："
  IMPR_FURTHER_MODIFIED_BY_2:0 "開発効率：$TECH$"
  IMPR_FURTHER_MODIFIED_BY_3:0 " 首都：$MULT$（§Y$VAL$§!の総開発度により）"
  IMPR_FINAL_BASE_COST:0 "最終的な基本コスト：$FINALBASECOST|Y$"
- IMPR_TOTAL_FURTHER_MODIFIED_BY:0 "総コストはさらに以下の補正を受けます："
+ IMPR_TOTAL_FURTHER_MODIFIED_BY:0 "総コストに対する補正："
  IMPR_FINAL_COST:0 "総コスト：$FINALCOST|Y$"
  CRUSADER_BENEFIT:0 "十字軍に参加し、軍隊に完全な維持費を払うことで\n$WHAT$を与えます"
  COLONIZE_IN_TORDESILLAS_CLAIM:0 "トリデシリャス条約：$VAL$\n"
@@ -881,7 +881,7 @@
  DISASTER_END_WHEN:0 "終息：\n$WHEN$"
  DISASTER_START_WHEN:0 "以下の条件で発生する可能性があります：\n$WHEN$"
  DISASTER_STOP_WHEN:0 "以下により停止できます：\n$WHEN$"
- DISASTER_PROGRESS_MODS:0 "進行度の補正：\n$PROGRESS$"
+ DISASTER_PROGRESS_MODS:0 "進行度に対する補正：\n$PROGRESS$"
  DISASTER_PROGRESS_WHERE:0 "現在の開始に向けた進捗状況は§Y$VAL$%§!です。"
  DISASTER_DOWN_PROGRESS:0 "これを停止した場合、月ごとの進捗状況は$DEC$になります。\n$WHY$"
  DISASTER_PROGRESS_WHY:1 "進捗状況は毎月$INC$です：\n$WHY$"
@@ -1106,7 +1106,7 @@
  IMPREF_PLAYER_YES:0 "人間のプレイヤーは改革を支援している：$VAL$\n"
  IMPREF_PLAYER_NO:0 "人間のプレイヤーは改革に反対している：$VAL$\n"
  EMPIRE_IS_INHERITABLE:0 "皇帝位は世襲制であり、選挙はありません。"
- FURTHER_MODIFIED_BY:0 "この値は以下によってさらに補正されます：\n"
+ FURTHER_MODIFIED_BY:0 "この値に対する補正：\n"
  PEACE_IN_EMPIRE:0 "帝国内は平和なため、帝国の権威は毎月§G+$VAL$§!増加します。"
  HRE_FOREIGN_CONTROL_IMPACT:0 "現在、帝国内の§Y$NUM$§!州が他国またはその従属国の支配下にあります。これは帝国の権威を毎月$VAL$減少させます。"
  IA_CHANGE_TOTAL:0 "帝国の権威は毎月$VAL$変化します。"
@@ -1192,7 +1192,7 @@
  state_controlled_guilds_desc:0 "国家が国内の様々なギルドを支配できるようになれば、国家の財源の規模を増やすことができる。"
  state_controlled_guilds:0 "国家がギルドを支配"
  desc_state_controlled_guilds:0 "国家が様々なギルドを支配できるようにすることで、我々の収入は増加した。"
- LAND_MAINT_IRO:0 "維持費コストは以下の要因により補正されます：\n$TXT$"
+ LAND_MAINT_IRO:0 "維持費コストに対する補正：\n$TXT$"
  MERC_MAINT_IRO:0 "傭兵の維持には以下の要因により§Y$VAL$%§!のコストがかかります：\n$TXT$"
  NAVY_TRADITION_IRO:0 "海軍の伝統は以下の要因により毎年$VAL|+$変化します：\n"
  NAVY_TRADITION_DRO:0 "海軍の伝統は、あなたの国家で蓄積された海軍の経験値です。伝統はアイデア、建物、戦闘及び探検から得られます。"
@@ -1603,7 +1603,7 @@
  NO_MERCHANT_HERE:0 "ここに商人がいません。"
  MERCHANT_IS_HERE:0 "あなたの商人$NAME$はここにいます。"
  TOO_MANY_ALLIANCES:0 "我々は§Y$VAL$§Wの同盟しか持つことができないため、それ以上を進めることはできません。"
- MANPOWER_SPEED_TT:0 "人的資源が回復する速度は、以下の補正を受けます："
+ MANPOWER_SPEED_TT:0 "人的資源が回復する速度に対する補正："
  centralisation_modifier:0 "中央集権化"
  desc_centralisation_modifier:0 "中央集権化の政策は、我々の税収を増加させるだろう。"
  decentralisation_modifier:0 "地方分権"
@@ -1616,7 +1616,7 @@
  SAILORS_IRO_OTHERS:0 "§Y水兵§!\n最大値は§Y$MAX$§Wです\n現在、彼らは毎月§Y$YEARLY$§W人獲得します\n彼らの海軍の完全な補充には§Y$NEED$§W人が必要で、今月は§Y$USED$§W人到着します。"
  SAILORS_DRO2:1 "§Y$MAX$§Wの最大水兵は以下に依存します\n"
  POOL_HAS_SAILORS:0 "§Y$POOL$§!の水兵が船の建設を待っているため、予備の水兵は§Y$MAX$§!より大きくなることはありません。"
- SAILORS_SPEED_TT:0 "水兵が回復する速度は、以下の補正を受けます："
+ SAILORS_SPEED_TT:0 "水兵が回復する速度に対する補正："
  LEDGER_SAILORS:0 "水兵"
  WAREX_PROGRESS:0 "$CURRENT$/$MAX$"
  WAREX_DEVELOPMENT:0 "毎月の戦争疲弊の進展は$VALUE$です。"
@@ -1661,7 +1661,7 @@
  desert_mountain:0 "砂漠山岳"
  grasslands:0 "草原"
  coastline:0 "海岸線"
- arctic_desc:0 "極寒の地形は、北極に近い雪と氷で覆われた地域を表します。"
+ arctic_desc:0 "寒帯は、北極に近い雪と氷で覆われた地域を表します。"
  forest_desc:0 "森の地形は、木や下草の密度が高い針葉樹林の地域を表します。"
  hills_desc:0 "丘陵の地形は、山よりも低くて険しくない、標高の変化する緩やかな起伏のある景色が支配する地域を表します。高地とは異なり丘陵の地形は、樹木や下草の密度が高い地域を表します。"
  woods_desc:0 "林の地形は、木や下草の密度が高い広葉樹林の地域を表します。"
@@ -3281,7 +3281,7 @@
  CORE_TERRITORY_DESC:0 "テリトリーである：$VAL$\n"
  CORE_COLONIAL_CORE_DESC:0 "テリトリーの中核州である：$VAL$\n"
  ADDITIVE_MODIFIERS_HEADER:0 "\n次により補正：\n"
- CORE_CREATION_COST_MODIFIER:0 "\n中核州構築コスト：$VAL$\n"
+ CORE_CREATION_COST_MODIFIER:0 "\n中核州構築コストに対する補正：$VAL$\n"
  CORE_COLONY:0 " - 植民地"
  CORE_OVERSEAS:0 " - 海外"
  CORE_SAME_REGION:0 " - 植民地域"
@@ -4790,7 +4790,7 @@
  TECH_NOT_AHEAD:0 "あなたはこの技術で先行して§Rいません§!。"
  WILL_GET_AHEAD_OF_TIME_BONUS:0 "この技術の先行は今後§G$YEARS$§!年間、次のボーナスをもたらします："
  X_PER_MONTH:0 "$X$/月"
- INSTRI_GROWS_BY_LOCAL:0 "制度の普及は以下により補正されます：\n"
+ INSTRI_GROWS_BY_LOCAL:0 "制度の普及に対する補正：\n"
  NO_MODIFIER_ON_INSTIGROW:0 "現在、制度の普及に対する補正はありません。"
  INSTITUTIONS_HEADER:0 "§Y制度§!"
  INSTITITION_GROWING:0 "$NAME$は1か月あたり$PER_MONTH$成長しています"
