--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -3795,7 +3795,7 @@
  flavor_hol.10.a:0 "再び方向を変える時が来ている。"
  flavor_hol.10.b:0 "寛大な貸付によって会社を助ける。"
  flavor_hol.10.c:0 "会社を解散する。"
- flavor_hol.11.t:1 "金融危機におけるオランダ東インド会社"
+ flavor_hol.11.t:1 "オランダ東インド会社の金融危機"
  flavor_hol.11.d:0 "より現実的な事業形態に移行したにもかかわらず、オランダ東インド会社は引き続き支払い能力に問題を抱えている。利益を喪失したにもかかわらず、配当の支払いを制限したくないため、当社は何十年もの間収益を計上している。\n今、独り立ちするため、同社はさらに多くの金を借り入れることを決断した。これは、当社が解散すべきである場合、その衝撃は金融部門に深刻な影響を与えるため、魅力的な提案である。"
  flavor_hol.11.a:0 "彼らはより多くの融資を必要としている！"
  flavor_hol.11.b:0 "会社を国有化する。"
