--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -1757,7 +1757,7 @@
  million_rice_fields:0 "百万の稲田"
  desc_million_rice_fields:0 "ラーンナーの新たに征服した土地から米が豊富に供給されるので、我軍は満腹で行進する。"
  chakravarti:0 "転輪聖王"
- desc_chakravarti:0 "我が君主は万物の王を意味する、転輪聖王の名を主張している。東南アジアの全民族は我が支配者を認識している。"
+ desc_chakravarti:0 "我が君主は万物の王を意味する、転輪聖王を称している。東南アジアの諸民族は我々の支配を受け入れるだろう。"
  tau_arakan_trade:0 "アラカン交易"
  desc_tau_arakan_trade:0 "チッタゴンの貿易都市を含む、アラカンの征服は我が海岸への貿易誘導のための新たな機会をもたらす。"
  tau_elephant_battle:0 "白象との戦い"
@@ -1783,7 +1783,7 @@
  desc_mughal_stronghold:0 "外国の侵略者を食い止め、これら山々の地元の一族を支配するために、この地域に強く、よく固められた砦を労を厭わず建てた。"
  pacified_kabulistan:0 "カブリスタンの鎮撫"
  heirs_of_timur:0 "ティムールの継承者"
- desc_heirs_of_timur:0 "私たちはアミール・ティムールの死で失われた帝国を一新し、シャー・ルフやアブー・サイードの野望を実現させた。"
+ desc_heirs_of_timur:0 "私たちはティムールの死によって失われた帝国を再建し、シャー・ルフやアブー・サイードの野望を現実のものとした。"
  mug_burmese_ruby_trade:0 "ビルマのルビー交易"
  desc_mug_burmese_ruby_trade:0 "上ビルマの征服により、帝国のために、世に知られているルビーの最大の源泉が確保された。"
  mughal_china:0 "ムガル中国"
