--- a/source/localisation/00_lanfang_l_english.yml
+++ b/source/localisation/00_lanfang_l_english.yml
@@ -274,7 +274,7 @@
  majapahit.3.a:0 "厳しい時代だ。"
  majapahit.4.t:0 "[Root.GetName]の新しき夜明け"
  majapahit.4.d:0 "あらゆる予想を覆して、数十年に及ぶ混乱と衰退を経て、[Root.GetName]は新たに再生を果たした勢力となりました。安定した[Root.GovernmentName]、忠実な属国、そして共通の信仰がガジャ・マダの誓い、「いつの日かマジャパヒトがヌサンタラ全域を支配する。」この誓いを忘れないという決意を支えてくれます。"
- majapahit.4.a:0 "崖っぷちからの生還です。"
+ majapahit.4.a:0 "復活への第一歩だ"
  majapahit.5.t:0 "ドゥマクの勃興"
  majapahit.5.d:0 "ドゥマクにおいて自治権を拡大しているイスラム教徒の共同体は、背教者のマジャパヒト皇子[Root.demak_sultan.GetName]を擁護者に見出しました。[Root.demak_sultan.GetName]は、ドゥマク・スルタン国の独立を宣言したばかりか、マジャパヒト王位の奪取まで目論んでいます。数々の争いに縛られている状況ですので、ドゥマクがその力を溜めている間に私たちができることなんて、たかが知れています。"
  majapahit.5.a:0 "裏切り者め！"
