--- a/source/localisation/mughal_government_l_english.yml
+++ b/source/localisation/mughal_government_l_english.yml
@@ -30,7 +30,7 @@
  mughal_government_african_assimilated:0 "スワヒリの富"
  mughal_government_african_assimilated_desc:0 "東バントゥー人の住むアフリカ東海岸は富であふれている。すでに開発され、価値ある資源を採掘するのが容易となるであろう、現地民の鉱山に感謝しなければならない。"
  mughal_government_east_slavic_assimilated:0 "大量徴兵"
- mughal_government_east_slavic_assimilated_desc:0 "東スラブ人は他国家よりも相対的に多くの軍隊を編成することができる。彼らは、我々が躊躇してきた方法である、大規模徴兵と下級階層の武装によって数を用意している。もしかすると、この方法にも利点があるのかもしれない。"
+ mughal_government_east_slavic_assimilated_desc:0 "東スラヴ人は他国家よりも相対的に多くの軍隊を編成することができる。彼らは、我々が躊躇してきた方法である大規模徴兵と、下級階層の武装によって数を用意している。もしかすると、この方法にも利点があるのかもしれない。"
  mughal_government_eastern_aryan_assimilated:0 "東インドの織物生産"
  mughal_government_eastern_aryan_assimilated_desc:0 "絹、綿、布は東インド経済を支えている。これらの製品を頼みにしているためこの地域は新しい生産技術の革新の中心であり、我々は躊躇なくこの技術を採用できる。"
  mughal_government_evenks_assimilated:0 "満州騎兵戦術"
@@ -72,7 +72,7 @@
  mughal_government_scandinavian_assimilated:0 "ノルドの競争と革新性"
  mughal_government_scandinavian_assimilated_desc:0 "スカンディナヴィアには長い戦争の伝統があり、そのおかげで、貴重な知見を持つ熟練の将校が沢山おり、我々はそこから徴用することができる。"
  mughal_government_south_slavic_assimilated:0 "スラヴ防壁"
- mughal_government_south_slavic_assimilated_desc:0 "南スラブ人は、外国の侵略に対する他のヨーロッパ諸国のための防波堤として行動してきた。彼らを平定することにより、その全てが無益であることを証明し、まもなく、ヨーロッパも同様に我が支配に服従するだろう。"
+ mughal_government_south_slavic_assimilated_desc:0 "南スラヴ人は、外国の侵略に対する他のヨーロッパ諸国のための防波堤として行動してきた。彼らを平定することにより、その全てが無益であることを証明し、まもなく、ヨーロッパも同様に我が支配に服従するだろう。"
  mughal_government_southern_african_assimilated:0 "南アフリカの金"
  mughal_government_southern_african_assimilated_desc:0 "南アフリカは金を豊富に産出しており、そのため現地の人々は手に負えないほどのインフレに陥ることはないように非常に効率的な計算方法をとっている。"
  mughal_government_sudanese_assimilated:0 "スーダン交易路"
@@ -86,7 +86,7 @@
  mughal_government_west_african_assimilated:0 "西アフリカの支配階級"
  mughal_government_west_african_assimilated_desc:0 "我が帝国は西アフリカの部族にまで伸びており、遠く離れた地元の支配者にますます依存している。しかし、時間とともに、これらの地元の支配層を我々に組み込むことができるようになり、ゆっくりと地方支配へ侵食し、彼らの自治を終わらせる。"
  mughal_government_west_slavic_assimilated:0 "スラヴ人将軍"
- mughal_government_west_slavic_assimilated_desc:0 "西スラブ人は数十年にわたって、新しい武器を常識破りの戦術で最大限に活用することに優れた軍隊の指揮官を輩出してきた。彼らを服従化させ、これを最大限に活用しなければならない。"
+ mughal_government_west_slavic_assimilated_desc:0 "西スラヴ人は数十年にわたって、新しい武器を常識破りの戦術で最大限に活用することに優れた軍隊の指揮官を輩出してきた。彼らを服従化させ、これを最大限に活用しなければならない。"
  mughal_government_western_aryan_assimilated:0 "グジャラート商人"
  mughal_government_western_aryan_assimilated_desc:0 "グジャラートに拠点とする商人は、利益を得る機会を求めて広大なインド洋を旅する。彼らは交易を洗練して精密な技術としており、その技術は彼らの港を取り入れた際に大いに役立つだろう。"
  mughal_government_southeastasian_group_assimilated:0 "タイの都市化"
